# python-project-52

./: .gitignore  Makefile  README.md  pyproject.toml
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: models.py  urls.py  views.py
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html  index.html  user_login.html  users.html
task_manager/templates/users/: user_create.html  user_delete.html  user_list.html
templates/: base.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
